--- a/index.html
+++ b/index.html
@@ -181,12 +181,15 @@
  .scan-card { background: #111827; color: #f8fafc; width: 96%; max-width: 620px; border-radius: 16px; padding: 14px; box-shadow: 0 10px 30px rgba(0,0,0,0.4); }
  .scan-header { display:flex; justify-content:space-between; align-items:center; margin-bottom:8px; }
  .scan-title { font-weight:800; font-size: 14px; color: #93c5fd; }
- .scan-controls { display:flex; gap:8px; align-items:center; margin: 8px 0 10px; }
+ .scan-controls { display:flex; gap:8px; align-items:center; margin: 8px 0 10px; flex-wrap: wrap; }
  .scan-controls select, .scan-controls button, .scan-controls input[type=file]{ padding:8px; border-radius:10px; border:1px solid #1f2937; background:#0b1220; color:#e5e7eb; font-size:12px; }
  .scan-video-wrap { position: relative; border-radius: 12px; overflow: hidden; border:2px solid #1f2937; }
  .scan-video-wrap video { width: 100%; height: auto; background: #000; display:block; }
  .scan-aim { position:absolute; inset: 12% 10%; border: 2px dashed rgba(147,197,253,0.7); border-radius: 8px; box-shadow: 0 0 0 20000px rgba(0,0,0,0.15) inset; pointer-events:none; }
  .scan-footer { display:flex; justify-content:space-between; align-items:center; margin-top:8px; font-size: 12px; color:#93c5fd; }
+
+ /* Video play engeline karşı mini buton */
+ #tapToPlayBtn{ display:none; background:#0ea5e9; color:#0b1220; font-weight:900; }
  </style>
 </head>
 <body>
@@ -295,9 +298,10 @@
         <span style="padding:8px 10px;border-radius:10px;background:#0ea5e9;">📁 Fotoğraftan Tara</span>
       </label>
       <button onclick="toggleTorch()" id="torchBtn" style="display:none;">🔦 Işık</button>
+      <button onclick="forcePlayVideo()" id="tapToPlayBtn">▶️ Dokun & Oynat</button>
     </div>
     <div class="scan-video-wrap">
-      <video id="preview" playsinline muted></video>
+      <video id="preview" playsinline muted autoplay></video>
       <div class="scan-aim"></div>
     </div>
     <div class="scan-footer">
@@ -438,18 +442,28 @@ async function migrateLargeDataUrlCovers(){ const THRESH=120000; let changed=fal
 (async function init(){ loadDB(); await migrateLargeDataUrlCovers(); render(); })();
 
 /* =====================
-   BARKOD TARAMA MODÜLÜ
+   BARKOD TARAMA MODÜLÜ (Kamera başlatma iyileştirildi)
    ===================== */
 let codeReader = null; let currentDeviceId = null; let streamRef = null; let trackRef = null; let torchOn = false; let _scanStopRequested = false;
 let _scanLocked = false;
 
 function cameraErrorMessage(err){
   const name = err?.name || '';
+  const msg = (err?.message || '').toString();
+
+  // ZXing yükleme hatası gibi kamera dışı problemleri ayrı mesajla gösterelim
+  if (/ZXing/i.test(msg) || /yüklenemedi/i.test(msg) || msg.includes('ZXing')){
+    return 'Barkod kütüphanesi (ZXing) yüklenemedi. İnternet bağlantısını kontrol edin veya engelleyici/kurum ağını devre dışı bırakın.';
+  }
+
+  if (!navigator.mediaDevices || !navigator.mediaDevices.getUserMedia) {
+    return 'Bu tarayıcı kamera erişimini desteklemiyor. (getUserMedia yok) Lütfen güncel Chrome/Safari kullanın.';
+  }
   if (!window.isSecureContext) {
     return 'Kamera için HTTPS gereklidir (güvenli bağlantı). Dosyayı https bir adresten açın.';
   }
   if (name === 'NotAllowedError' || name === 'SecurityError') {
-    return 'Kamera izni reddedildi. Tarayıcı ayarlarından kamera iznini açın.';
+    return 'Kamera izni reddedildi veya medya oynatma engellendi. Tarayıcı ayarlarından kamera iznini açın; iPhone/Safari ise sayfada bir kez “Başlat”a basıp izin verin.';
   }
   if (name === 'NotFoundError' || name === 'DevicesNotFoundError') {
     return 'Kamera bulunamadı. Cihazınızda kamera yok veya erişilemiyor.';
@@ -460,6 +474,9 @@ function cameraErrorMessage(err){
   if (name === 'OverconstrainedError' || name === 'ConstraintNotSatisfiedError') {
     return 'Seçilen kamera/ayarlar desteklenmiyor. Farklı kamera seçip tekrar deneyin.';
   }
+  if (name === 'AbortError') {
+    return 'Kamera başlatma iptal edildi. Tekrar deneyin.';
+  }
   return 'Kamera başlatılamadı. İzinleri ve bağlantıyı kontrol edip tekrar deneyin.';
 }
 
@@ -468,6 +485,7 @@ async function openScanner(){
   $('scanLast').textContent = '';
   $('scanInfo').textContent='Kamera hazırlanıyor...';
   _scanLocked = false;
+  $('tapToPlayBtn').style.display='none';
 
   try{
     await loadZXing();
@@ -476,12 +494,16 @@ async function openScanner(){
     // Bu yüzden önce izin akışını tetikleyip hemen kapatıyoruz (warm-up).
     try{
       if (navigator.mediaDevices?.getUserMedia) {
-        const warm = await navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } });
+        const warm = await navigator.mediaDevices.getUserMedia({ video: { facingMode: { ideal: 'environment' } } });
         warm.getTracks().forEach(t=>t.stop());
       }
     }catch(e){}
 
     await listCameras();
+
+    // ÖNEMLİ: Bazı tarayıcılarda (özellikle iOS) user-gesture hassas.
+    // Modal açılır açılmaz otomatik başlatmayı koruyoruz ama video.play engellenirse
+    // kullanıcıya “Dokun & Oynat” butonu gösteriyoruz.
     await startScan();
   }catch(err){
     $('scanInfo').textContent = cameraErrorMessage(err);
@@ -490,7 +512,18 @@ async function openScanner(){
 }
 function hideScanner(){ stopScan(); $('scanModal').style.display='none'; }
 function closeScanner(e){ if(e && e.target && e.target.id==='scanModal'){ hideScanner(); } }
-async function loadZXing(){ if(window.ZXing && (ZXing.BrowserMultiFormatReader || ZXing.BrowserBarcodeReader)) return; return new Promise((resolve, reject)=>{ const s1=document.createElement('script'); s1.src='https://unpkg.com/@zxing/library@0.20.0'; s1.onload=()=>resolve(); s1.onerror=()=>reject(new Error('ZXing yüklenemedi')); document.head.appendChild(s1); }); }
+
+async function loadZXing(){
+  if(window.ZXing && (ZXing.BrowserMultiFormatReader || ZXing.BrowserBarcodeReader)) return;
+  return new Promise((resolve, reject)=>{
+    const s1=document.createElement('script');
+    s1.src='https://unpkg.com/@zxing/library@0.20.0';
+    s1.onload=()=>resolve();
+    s1.onerror=()=>reject(new Error('ZXing yüklenemedi'));
+    document.head.appendChild(s1);
+  });
+}
+
 async function listCameras(){
   try{
     if(!navigator.mediaDevices || !navigator.mediaDevices.enumerateDevices) throw new Error('enumerateDevices yok');
@@ -501,6 +534,7 @@ async function listCameras(){
     camSel.innerHTML = vids.map((d,i)=>`<option value="${d.deviceId}">${d.label || ('Kamera '+(i+1))}</option>`).join('');
 
     if(vids.length>0){
+      // Genelde son kamera (çoğu cihazda arka kamera) daha iyi sonuç verir
       currentDeviceId = vids[vids.length-1].deviceId;
       camSel.value = currentDeviceId;
       camSel.onchange = ()=>{
@@ -514,24 +548,39 @@ async function listCameras(){
     console.warn(e);
   }
 }
+
+function _sleep(ms){ return new Promise(r=>setTimeout(r, ms)); }
+
 async function startScan(){
   try{
     stopScan();
     _scanStopRequested = false;
     _scanLocked = false;
+    $('tapToPlayBtn').style.display='none';
+
+    if(!navigator.mediaDevices || !navigator.mediaDevices.getUserMedia){
+      $('scanInfo').textContent = cameraErrorMessage({message:'getUserMedia yok'});
+      return;
+    }
 
     $('scanInfo').textContent='Taranıyor...';
 
     const video = $('preview');
     video.setAttribute('playsinline','');
     video.setAttribute('muted','');
+    video.setAttribute('autoplay','');
     video.muted = true;
+    video.autoplay = true;
+    video.playsInline = true;
 
     // 1) Önce seçili deviceId ile dene
     let constraints = {
+      audio: false,
       video: {
         deviceId: currentDeviceId ? { exact: currentDeviceId } : undefined,
-        facingMode: currentDeviceId ? undefined : 'environment'
+        facingMode: currentDeviceId ? undefined : { ideal: 'environment' },
+        width: { ideal: 1280 },
+        height: { ideal: 720 }
       }
     };
 
@@ -543,10 +592,10 @@ async function startScan(){
       const n1 = err1?.name || '';
       if (n1 === 'OverconstrainedError' || n1 === 'ConstraintNotSatisfiedError'){
         try{
-          stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } });
+          stream = await navigator.mediaDevices.getUserMedia({ audio:false, video: { facingMode: { ideal: 'environment' }, width:{ideal:1280}, height:{ideal:720} } });
         } catch(err2){
           // 3) Son çare: video: true
-          stream = await navigator.mediaDevices.getUserMedia({ video: true });
+          stream = await navigator.mediaDevices.getUserMedia({ audio:false, video: true });
         }
       } else {
         throw err1;
@@ -555,7 +604,26 @@ async function startScan(){
 
     streamRef = stream;
     video.srcObject = streamRef;
-    await video.play();
+
+    // iOS/Safari: metadata gelmeden play başarısız olabiliyor
+    await new Promise((resolve)=>{
+      let done = false;
+      const finish = ()=>{ if(done) return; done=true; resolve(true); };
+      video.onloadedmetadata = finish;
+      // metadata gelmezse de kısa bekleyip devam
+      setTimeout(finish, 500);
+    });
+
+    // video.play user-gesture yüzünden bloklanırsa: kullanıcıya buton göster
+    let playOk = true;
+    try{
+      await video.play();
+    } catch(playErr){
+      playOk = false;
+      console.warn('video.play engellendi:', playErr);
+      $('tapToPlayBtn').style.display='inline-block';
+      $('scanInfo').textContent='Video oynatımı engellendi. "Dokun & Oynat" ile başlatın.';
+    }
 
     const tracks = streamRef.getVideoTracks();
     trackRef = tracks && tracks[0];
@@ -573,7 +641,7 @@ async function startScan(){
       $('torchBtn').style.display='none';
     }
 
-    // ZXing: Kamerayı tekrar açtırmadan, mevcut video elementinden sürekli çözümle
+    // ZXing: mevcut video elementinden sürekli çözümle
     await loadZXing();
     const Reader = ZXing.BrowserMultiFormatReader || ZXing.BrowserBarcodeReader;
     codeReader = new Reader();
@@ -592,20 +660,44 @@ async function startScan(){
     // Continuous decode
     codeReader.decodeFromVideoElementContinuously(video, (result, err) => {
       if (_scanStopRequested || _scanLocked) return;
+      // Bazı durumlarda video.play gecikirse burada hata spam olabilir, yoksay.
       if (result && result.getText) {
         _scanLocked = true;
         onScanResult(result.getText());
       }
     });
 
+    // Eğer playOk false ise kullanıcı oynatınca decode zaten akacak.
+    if(playOk){
+      $('scanInfo').textContent='Taranıyor...';
+    }
+
   } catch(e){
     $('scanInfo').textContent = cameraErrorMessage(e);
     console.error(e);
   }
 }
+
+function forcePlayVideo(){
+  const video = $('preview');
+  if(!video) return;
+  video.play().then(()=>{
+    $('tapToPlayBtn').style.display='none';
+    $('scanInfo').textContent='Taranıyor...';
+  }).catch(err=>{
+    $('scanInfo').textContent = cameraErrorMessage(err);
+    console.warn(err);
+  });
+}
+
 function stopScan(){
   try{ _scanStopRequested = true; }catch(e){}
   try{ _scanLocked = false; }catch(e){}
+
+  // Torch state reset (bazı cihazlarda açık kalabiliyor)
+  try{ torchOn = false; }catch(e){}
+  try{ const tb = $('torchBtn'); if(tb) tb.textContent = '🔦 Işık'; }catch(e){}
+  try{ const pb = $('tapToPlayBtn'); if(pb) pb.style.display='none'; }catch(e){}
 
   // ZXing reset
   try{
@@ -631,19 +723,110 @@ function stopScan(){
   trackRef=null;
   streamRef=null;
 }
-async function toggleTorch(){ try{ if(!trackRef) return; const caps = trackRef.getCapabilities?.(); if(!(caps && caps.torch)) return; torchOn = !torchOn; await trackRef.applyConstraints({ advanced: [{ torch: torchOn }] }); $('torchBtn').textContent = torchOn ? '🔦 Işık (Açık)' : '🔦 Işık'; } catch(e){ console.warn('Torch desteklenmiyor'); }
+
+async function toggleTorch(){
+  try{
+    if(!trackRef) return;
+    const caps = trackRef.getCapabilities?.();
+    if(!(caps && caps.torch)) return;
+    torchOn = !torchOn;
+    await trackRef.applyConstraints({ advanced: [{ torch: torchOn }] });
+    $('torchBtn').textContent = torchOn ? '🔦 Işık (Açık)' : '🔦 Işık';
+  } catch(e){
+    console.warn('Torch desteklenmiyor');
+  }
 }
-function onScanResult(text){ $('scanLast').textContent = 'Son: '+text; const isbn = extractIsbn(text); if(isbn){ $('isbnSearch').value = isbn; $('scanInfo').textContent = 'ISBN bulundu: '+isbn; hideScanner(); fetchBook(); beep(); } else { $('scanInfo').textContent = 'Kod okundu fakat ISBN bulunamadı'; beep(440, 120); }
+
+function onScanResult(text){
+  $('scanLast').textContent = 'Son: '+text;
+  const isbn = extractIsbn(text);
+  if(isbn){
+    $('isbnSearch').value = isbn;
+    $('scanInfo').textContent = 'ISBN bulundu: '+isbn;
+    hideScanner();
+    fetchBook();
+    beep();
+  } else {
+    $('scanInfo').textContent = 'Kod okundu fakat ISBN bulunamadı';
+    beep(440, 120);
+  }
 }
-function extractIsbn(txt){ const s = (txt||'').toString().trim(); const num = s.replace(/\D/g,''); if(num.length===13 && (num.startsWith('978')||num.startsWith('979'))) return num; if(num.length===10){ return isbn10to13(num); }
- // Try URL param isbn=xxxx
- try { const u = new URL(s); const q = u.searchParams.get('isbn') || u.searchParams.get('ISBN'); if(q){ return q.replace(/\D/g,''); } } catch(e){}
- return null; }
-function isbn10to13(isbn10){ try{ const core = '978' + isbn10.slice(0,9); let sum = 0; for(let i=0;i<12;i++){ sum += parseInt(core[i],10) * (i%2===0 ? 1 : 3); } const check = (10 - (sum % 10)) % 10; return core + String(check); } catch(e){ return null; } }
-function beep(freq=880, dur=80){ try{ const ctx = new (window.AudioContext||window.webkitAudioContext)(); const o = ctx.createOscillator(); const g = ctx.createGain(); o.connect(g); g.connect(ctx.destination); o.frequency.value=freq; o.type='triangle'; o.start(); g.gain.exponentialRampToValueAtTime(0.0001, ctx.currentTime + dur/1000); setTimeout(()=>{ o.stop(); ctx.close(); }, dur+20); } catch(e){}
+
+function extractIsbn(txt){
+  const s = (txt||'').toString().trim();
+  const num = s.replace(/\D/g,'');
+  if(num.length===13 && (num.startsWith('978')||num.startsWith('979'))) return num;
+  if(num.length===10){ return isbn10to13(num); }
+  // Try URL param isbn=xxxx
+  try {
+    const u = new URL(s);
+    const q = u.searchParams.get('isbn') || u.searchParams.get('ISBN');
+    if(q){ return q.replace(/\D/g,''); }
+  } catch(e){}
+  return null;
 }
-async function scanFromImage(e){ const file = e.target.files && e.target.files[0]; if(!file) return; $('scanInfo').textContent='Resim analiz ediliyor...'; const img = new Image(); img.onload = async ()=>{ try{ const canvas = document.createElement('canvas'); canvas.width = img.width; canvas.height = img.height; const ctx = canvas.getContext('2d'); ctx.drawImage(img,0,0); const dataUrl = canvas.toDataURL('image/png'); await loadZXing(); const Reader = ZXing.BrowserMultiFormatReader || ZXing.BrowserBarcodeReader; const reader = new Reader(); const res = await reader.decodeFromImageUrl(dataUrl); if(res && res.getText){ onScanResult(res.getText()); } else { $('scanInfo').textContent='Barkod bulunamadı'; beep(440, 120); } } catch(err){ $('scanInfo').textContent='Çözümlenemedi'; console.error(err); } };
- const fr = new FileReader(); fr.onload = (ev)=>{ img.src = ev.target.result; }; fr.readAsDataURL(file); }
+
+function isbn10to13(isbn10){
+  try{
+    const core = '978' + isbn10.slice(0,9);
+    let sum = 0;
+    for(let i=0;i<12;i++){
+      sum += parseInt(core[i],10) * (i%2===0 ? 1 : 3);
+    }
+    const check = (10 - (sum % 10)) % 10;
+    return core + String(check);
+  } catch(e){
+    return null;
+  }
+}
+
+function beep(freq=880, dur=80){
+  try{
+    const ctx = new (window.AudioContext||window.webkitAudioContext)();
+    const o = ctx.createOscillator();
+    const g = ctx.createGain();
+    o.connect(g);
+    g.connect(ctx.destination);
+    o.frequency.value=freq;
+    o.type='triangle';
+    o.start();
+    g.gain.exponentialRampToValueAtTime(0.0001, ctx.currentTime + dur/1000);
+    setTimeout(()=>{ o.stop(); ctx.close(); }, dur+20);
+  } catch(e){}
+}
+
+async function scanFromImage(e){
+  const file = e.target.files && e.target.files[0];
+  if(!file) return;
+  $('scanInfo').textContent='Resim analiz ediliyor...';
+  const img = new Image();
+  img.onload = async ()=>{
+    try{
+      const canvas = document.createElement('canvas');
+      canvas.width = img.width;
+      canvas.height = img.height;
+      const ctx = canvas.getContext('2d');
+      ctx.drawImage(img,0,0);
+      const dataUrl = canvas.toDataURL('image/png');
+      await loadZXing();
+      const Reader = ZXing.BrowserMultiFormatReader || ZXing.BrowserBarcodeReader;
+      const reader = new Reader();
+      const res = await reader.decodeFromImageUrl(dataUrl);
+      if(res && res.getText){
+        onScanResult(res.getText());
+      } else {
+        $('scanInfo').textContent='Barkod bulunamadı';
+        beep(440, 120);
+      }
+    } catch(err){
+      $('scanInfo').textContent='Çözümlenemedi';
+      console.error(err);
+    }
+  };
+  const fr = new FileReader();
+  fr.onload = (ev)=>{ img.src = ev.target.result; };
+  fr.readAsDataURL(file);
+}
 </script>
 <!-- ZXing kütüphanesini dinamik yükleyerek ekledik. İsterse aşağıdaki CDN'i statik olarak da ekleyebilirsiniz: -->
 <!-- <script src="https://unpkg.com/@zxing/library@0.20.0"></script> -->
